--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -7,15 +7,15 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   {
     title: "Treino 1:3",
-    path: "/treino-grupo",
+    path: "/estudionodoanegra/treino-grupo",
   },
   {
     title: "Treino 1:1",
-    path: "/treino-individual",
+    path: "/estudionodoanegra/treino-individual",
   },
   {
     title: "Contacto",
-    path: "/contacto",
+    path: "/estudionodoanegra/contacto",
   },
 ];
 ---
@@ -24,7 +24,7 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
+        <a href="/estudionodoanegra/" class="text-lg"
           >
           <span>Estúdio</span>
           <span class="font-bold">Nódoa Negra</span>
