--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -19,7 +19,7 @@
     Pequenos grupos de treino personalizado 1:3
   </h3>
   <p class="text-lg mt-4 text-slate-800">
-    Realizamos treinos personalizados em pequenos grupos, com um máximo de 3 clientes simultaneament, em que cada grupo é acompanhado por um treinador dedicado, que oferece atenção individualizada a cada participante.
+    Realizamos treinos personalizados em pequenos grupos, com um máximo de 3 clientes simultaneamente, em que cada grupo é acompanhado por um treinador dedicado, que oferece atenção individualizada a cada participante.
   </p>
   <p class="text-lg mt-4 text-slate-800">
     Esta abordagem permite que aproveites os benefícios do treino personalizado, enquanto desfrutas de uma atmosfera motivadora e de apoio mútuo com os outros membros do grupo.
