--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -20,15 +20,15 @@ import { Icon } from "astro-icon";
   </div>
   <div>
     <h1
-      class="text-5xl lg:text-6xl font-bold lg:tracking-tight xl:tracking-tighter mb-3">
+      class="text-5xl lg:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
       Nódoa Negra
     </h1>
     <h2
-      class="text-3xl lg:text-4xl font-bold lg:tracking-tight xl:tracking-tighter">
+      class="text-3xl lg:text-4xl font-bold lg:tracking-tight xl:tracking-tighter mt-1">
       Estúdio de Treino Personalizado
     </h2>
     <p class="text-lg mt-4 text-slate-900 max-w-xl">
-      Somos um estúdio localizado no <b>Funchal, Madeira</b>, onde promovemos a atividade física para todos os tipos de pessoas, ajudando a aumentar a força e resistência.
+      Somos um estúdio localizado no <b>Funchal, Madeira</b>, onde promovemos a atividade física para todos, ajudando a aumentar a força e resistência.
     </p>
     <p class="text-lg mt-4 text-slate-900 max-w-xl">
       Aqui na Nódoa Negra, os nossos treinadores são especialistas em treino de força, hipertrofia e melhoria da composição corporal.
