--- a/src/components/sectionpricing.astro
+++ b/src/components/sectionpricing.astro
@@ -22,7 +22,7 @@ const pricing = [
   {
     name: "Treino Personalizado",
     price: "1:1",
-    popular: false,
+    popular: true,
     features: [
       "1 treinador por cliente",
       "Sessão de 1 hora",
