--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Container from "@components/container.astro";
-import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
+import Espaco from "@components/espaco.astro";
+import Features from "@components/features.astro";
 import Sectionpricing from "@components/sectionpricing.astro";
 import Layout from "@layouts/Layout.astro";
 ---
@@ -9,6 +10,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="">
   <Container>
     <Hero />
+    <Espaco />
     <Features />
     <Sectionpricing />
   </Container>
