--- a/src/pages/treino-grupo.astro
+++ b/src/pages/treino-grupo.astro
@@ -20,7 +20,7 @@ import Inscricaoform from "@components/inscricaoform.astro";
         <p class="text-lg mt-4 text-slate-800">
           Esta abordagem permite que aproveites os benefícios do treino personalizado, enquanto desfrutas de uma atmosfera motivadora e de apoio mútuo com os outros membros do grupo.
         </p>
-        <p class="text-lg mt-4 text-slate-800">Mantemos os grupos intencionalmente pequenos para garantir que recebas a orientação necessária para atingires os teus objetivos de forma eficaz.
+        <p class="text-lg mt-4 text-slate-800">Mantemos os grupos intencionalmente pequenos para garantir que recebes a orientação necessária para atingires os teus objetivos de forma eficaz.
         </p>
         <div class="prose prose-lg mt-10">
         <h3>Preçário</h3>
