Update colors and weights

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,5 +1,5 @@
 <div class="mt-16 md:mt-0">
-  <h3 class="text-3xl lg:text-4xl font-bold lg:tracking-tight">
+  <h3 class="text-3xl lg:text-4xl font-medium lg:tracking-tight">
     Para quem se destina
   </h3>
   <p class="text-lg mt-4 text-slate-800">
