--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,5 @@
 <footer class="my-20">
-  <p class="text-center text-sm text-slate-800">
+  <p class="text-center text-sm">
     Copyright © {new Date().getFullYear()} Estúdio Nódoa Negra.
   </p>
 </footer>
