--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,26 +5,22 @@ import Logo from "assets/logo-nodoa-negra.png";
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
+  <div class="md:block mb-10 md:mt-10 md:mr-10">
     <Picture
       src={Logo}
       alt="Estúdio Nódoa Negra"
       widths={[275, 550, 1100]}
-      aspectRatio="1:1"
-      sizes="(max-width: 800px) 100vw, 550px"
+      aspectRatio="2147:1536"
+      sizes="(max-width: 800px) 100vw, 500px"
       loading="eager"
       format="avif"
     />
   </div>
   <div>
     <h1
-      class="text-5xl lg:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Nódoa Negra
-    </h1>
-    <h2
-      class="text-3xl lg:text-4xl font-bold lg:tracking-tight xl:tracking-tighter mt-1">
+      class="text-2xl lg:text-4xl font-medium lg:tracking-tight xl:tracking-tighter mt-1">
       Estúdio de Treino Personalizado
-    </h2>
+    </h1>
     <p class="text-lg mt-4 text-slate-900 max-w-xl">
       Somos um estúdio localizado no <b>Funchal, Madeira</b>, onde promovemos a atividade física para todos, ajudando a aumentar a força e resistência.
     </p>
