--- a/src/components/sectionpricing.astro
+++ b/src/components/sectionpricing.astro
@@ -44,6 +44,6 @@ const pricing = [
 
   <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-screen-lg mt-12">
     {pricing.map((item) => <Pricing plan={item} />)}
-    <p>** Os dois modos incluem toalha de treino e café <Icon class="text-black w-5 h-5 mb-1 inline-block" name="bx:bx-coffee" /></p>
+    <p>** Os dois modos incluem toalha de treino e café <Icon class="text-secondary w-5 h-5 mb-1 inline-block" name="bx:bx-coffee" /></p>
   </div>
 </Container>
