--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -21,9 +21,9 @@ const sizes = {
 };
 
 const styles = {
-  outline: "border-2 border-black hover:bg-black text-black hover:text-white",
+  outline: "border-2 border-secondary hover:bg-secondary text-secondary hover:text-primary",
   primary:
-    "bg-black text-white hover:bg-slate-900  border-2 border-transparent",
+    "bg-primary hover:bg-secondary hover:text-primary border-2 border-secondary",
 };
 ---
 
