--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,7 +51,7 @@ const makeTitle = title
       }}
     />
   </head>
-  <body class="bg-yellow-500">
+  <body class="bg-primary text-secondary">
     <Navbar />
     <slot />
     <Footer />
