--- a/src/pages/treino-individual.astro
+++ b/src/pages/treino-individual.astro
@@ -14,19 +14,19 @@ import Inscricaoform from "@components/inscricaoform.astro";
 
     <div class="grid md:grid-cols-1 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <p class="text-lg mt-4 text-slate-800">
+        <p class="text-lg mt-4">
           O nosso modo individual é ideal para situações em que buscas um atendimento exclusivo, como em casos médicos específicos ou quando valorizas a máxima privacidade durante os treinos.
         </p>
-        <p class="text-lg mt-4 text-slate-800">
+        <p class="text-lg mt-4">
           Nesse formato, terás um treinador dedicado exclusivamente a ti. O treinador irá criar um programa personalizado, levando em consideração as tuas metas, a tua condição física atual e as tuas necessidades específicas.
         </p>
-        <p class="text-lg mt-4 text-slate-800">
+        <p class="text-lg mt-4">
           Esta abordagem individualizada permite uma atenção ainda mais focada no teu progresso, garantindo que cada treino seja adaptado às tuas capacidades e limitações.
         </p>
         <div class="prose prose-lg mt-10">
         <h3>Preçário</h3>
         <table class="text-center">
-          <thead class="border-gray-800">
+          <thead class="border-secondary border-b-2">
             <tr>
               <th>Plano</th>
               <th>Entradas</th>
@@ -34,34 +34,34 @@ import Inscricaoform from "@components/inscricaoform.astro";
             </tr>
           </thead>
           <tbody>
-            <tr class="border-gray-600">
+            <tr class="border-secondary">
               <td>1</td>
               <td>12</td>
               <td>400€</td>
             </tr>
-            <tr class="border-gray-600">
+            <tr class="border-secondary">
               <td>2</td>
               <td>10</td>
               <td>340€</td>
             </tr>
-            <tr class="border-gray-600">
+            <tr class="border-secondary">
               <td>3</td>
               <td>8</td>
               <td>280€</td>
             </tr>
-            <tr class="border-gray-600">
+            <tr class="border-secondary">
               <td>4</td>
               <td>6</td>
               <td>250€</td>
             </tr>
-            <tr class="border-gray-600">
+            <tr class="border-secondary">
               <td>5</td>
               <td>4</td>
               <td>180€</td>
             </tr>
           </tbody>
         </table>
-        <p class="text-sm mt-4 text-slate-800">
+        <p class="text-sm mt-4">
           Ao preço da mensalidade <b>acresce o IVA à taxa legal de 22%.</b>
         </p>
       </div>
@@ -70,11 +70,11 @@ import Inscricaoform from "@components/inscricaoform.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Pré-inscrição</h2>
-        <p class="text-slate-800 mt-3">
+        <h2 class="font-medium text-2xl">Pré-inscrição</h2>
+        <p class="mt-3">
           Preenche o formulário e contactamos-te logo que possível.
         </p>
-        <p class="text-slate-800 mt-3">
+        <p class="mt-3">
           Podes sempre entrar em <a href="/estudionodoanegra/contacto" class="underline">contacto connosco</a> para esclarecer alguma dúvida ou visitares o nosso espaço.
         </p>
       </div>
