--- a/src/components/espaco.astro
+++ b/src/components/espaco.astro
@@ -2,7 +2,7 @@
 import Galeria from "@components/galeria.astro";
 ---
 <div class="mb-16">
-    <h3 class="text-3xl lg:text-4xl font-bold lg:tracking-tight mb-4">
+    <h3 class="text-3xl lg:text-4xl font-medium lg:tracking-tight mb-5">
         O nosso espaço
       </h3>
     <Galeria />
