--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -23,10 +23,10 @@ const sizes = {
 };
 
 const styles = {
-  outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
-  primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
-  inverted: "bg-white text-black   border-2 border-transparent",
-  muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+  outline: "bg-primary border-2 border-secondary hover:bg-secondary text-secondary",
+  primary: "bg-secondary text-primary border-2 border-secondary hover:bg-primary hover:text-secondary",
+  inverted: "bg-white text-black border-2 border-transparent",
+  muted: "bg-gray-100 hover:bg-gray-200 border-2 border-transparent",
 };
 ---
 
