--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -15,17 +15,17 @@ import Contactform from "@components/contactform.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contactar o estúdio</h2>
-        <p class="text-lg leading-relaxed text-slate-800 mt-3">
+        <h2 class="font-medium text-2xl">Contactar o estúdio</h2>
+        <p class="text-lg leading-relaxed mt-3">
           Estamos aqui para ajudar. Preenche o formulário ou envia e-mail.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-800">
-            <Icon class="text-gray-800 w-4 h-4" name="uil:map-marker" />
+          <div class="flex items-center mt-2 space-x-2">
+            <Icon class="w-4 h-4" name="uil:map-marker" />
             <span>Rua da Ponta da Cruz 2, Funchal</span>
           </div>
-          <div class="flex items-center mt-2 space-x-2 text-gray-800">
-            <Icon class="text-gray-800 w-4 h-4" name="uil:envelope" /><a
+          <div class="flex items-center mt-2 space-x-2">
+            <Icon class="w-4 h-4" name="uil:envelope" /><a
               href="mailto:hello@astroshipstarter.com"
               >estudio.nodoanegra@gmail.com</a
             >
