--- a/src/components/galeria.astro
+++ b/src/components/galeria.astro
@@ -1,5 +1,6 @@
 ---
-const images = await Astro.glob('../../public/estudio/*.jpg');
+import { Picture } from "@astrojs/image/components";
+const images = await Astro.glob('../../public/estudio/*.jpeg');
 ---
 
 <div class="container mx-auto">
@@ -7,10 +8,15 @@ const images = await Astro.glob('../../public/estudio/*.jpg');
       {images.map((image) => (
       <div class="flex w-1/2 md:w-1/3 lg:w-1/4 flex-wrap">
         <div class="w-full p-1">
-          <img
+          <Picture
+            src={image.default.src}
+            widths={[200, 400, 800]}
+            sizes="(max-width: 400px) 100vw, 800px"
+            aspectRatio="4032:3024"
+            loading="eager"
+            format="avif"
             alt="Estúdio Nódoa Negra"
-            class="block h-full w-full rounded-sm object-cover object-center"
-            src={image.default.src} />
+          />
         </div>
       </div>
       ))}
