--- a/src/components/galeria.astro
+++ b/src/components/galeria.astro
@@ -3,22 +3,53 @@ import { Picture } from "@astrojs/image/components";
 const images = await Astro.glob('../../public/estudio/*.jpeg');
 ---
 
-<div class="container mx-auto">
-    <div class="-m-1 flex flex-wrap md:-m-2">
-      {images.map((image) => (
-      <div class="flex w-1/2 md:w-1/3 lg:w-1/4 flex-wrap">
-        <div class="w-full p-1">
+<div class="swiper">
+  <div class="swiper-wrapper">
+    {images.map((image) => (
+        <div class="swiper-slide">
           <Picture
             src={image.default.src}
-            widths={[200, 400, 800]}
-            sizes="(max-width: 400px) 100vw, 800px"
-            aspectRatio="4032:3024"
+            widths={[310, 620, 1240]}
+            sizes="(max-width: 1240px) 100vw, 1240px"
+            aspectRatio="3:2"
             loading="eager"
             format="avif"
             alt="Estúdio Nódoa Negra"
           />
         </div>
-      </div>
       ))}
-    </div>
+  </div>
+  <div class="swiper-pagination"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+  <div class="swiper-scrollbar"></div>
 </div>
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+<script is:inline src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script is:inline>
+  const swiper = new Swiper('.swiper', {
+    direction: 'horizontal',
+    effect: 'fade',
+    loop: true,
+    pagination: {
+      el: '.swiper-pagination',
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+    scrollbar: {
+      el: '.swiper-scrollbar'
+    },
+  });
+</script>
+<style is:inline>
+  :root {
+    --swiper-theme-color: #ffd000;
+    --swiper-pagination-bullet-inactive-color: #fff;
+    --swiper-scrollbar-drag-bg-color: rgb(178 168 151);
+    --swiper-scrollbar-bg-color: rgb(60 60 60);
+  }
+</style>
