--- a/src/pages/treino-individual.astro
+++ b/src/pages/treino-individual.astro
@@ -75,11 +75,11 @@ import Inscricaoform from "@components/inscricaoform.astro";
           Preenche o formulário e contactamos-te logo que possível.
         </p>
         <p class="mt-3">
-          Podes sempre entrar em <a href="/estudionodoanegra/contacto" class="underline">contacto connosco</a> para esclarecer alguma dúvida ou visitares o nosso espaço.
+          Podes sempre entrar em <a href="/contacto" class="underline">contacto connosco</a> para esclarecer alguma dúvida ou visitares o nosso espaço.
         </p>
       </div>
       <div>
-        <Inscricaoform />
+        <Inscricaoform plano="Treino 1:1"/>
       </div>
     </div>
   </Container>
