--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -2,16 +2,13 @@
 import Button from "./ui/button.astro";
 ---
 
-<!-- To make this contact form work, create your free access key from https://web3forms.com/
-     Then you will get all form submissions in your email inbox. -->
 <form
   action="https://api.web3forms.com/submit"
   method="POST"
   id="form"
   class="needs-validation"
   novalidate>
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-  <!-- Create your free access key from https://web3forms.com/ -->
+  <input type="hidden" name="access_key" value="a7ab21df-0d99-4b98-be8e-845995fd2b0d" />
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <input
@@ -49,7 +46,7 @@ import Button from "./ui/button.astro";
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Mensagem
+      Por favor escreve a tua mensagem.
     </div>
   </div>
   <Button type="submit" size="lg" block>Enviar mensagem</Button>
@@ -91,7 +88,7 @@ import Button from "./ui/button.astro";
     const object = Object.fromEntries(formData);
     const json = JSON.stringify(object);
 
-    result.innerHTML = "Sending...";
+    result.innerHTML = "A enviar...";
 
     fetch("https://api.web3forms.com/submit", {
       method: "POST",
