--- a/src/components/inscricaoform.astro
+++ b/src/components/inscricaoform.astro
@@ -1,17 +1,17 @@
 ---
 import Button from "./ui/button.astro";
+
+const { plano } = Astro.props;
 ---
 
-<!-- To make this contact form work, create your free access key from https://web3forms.com/
-     Then you will get all form submissions in your email inbox. -->
 <form
   action="https://api.web3forms.com/submit"
   method="POST"
   id="form"
   class="needs-validation"
   novalidate>
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-  <!-- Create your free access key from https://web3forms.com/ -->
+  <input type="hidden" name="access_key" value="a7ab21df-0d99-4b98-be8e-845995fd2b0d" />
+  <input type="hidden" name="plano" value={plano} />
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <input
@@ -19,7 +19,7 @@ import Button from "./ui/button.astro";
       placeholder="Nome"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
-      name="name"
+      name="nome"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Por favor indica o teu nome.
@@ -50,13 +50,13 @@ import Button from "./ui/button.astro";
       name="telefone"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Por favor indica o teu número de telefone/telemóvel.
+      Por favor indica o teu número de telefone.
     </div>
   </div>
   <div class="mb-3">
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">Ooops!</div>
   </div>
-  <Button type="submit" size="lg" block>Inscrever</Button>
+  <Button type="submit" size="lg" block>Submeter pré-inscrição</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
@@ -95,7 +95,7 @@ import Button from "./ui/button.astro";
     const object = Object.fromEntries(formData);
     const json = JSON.stringify(object);
 
-    result.innerHTML = "Sending...";
+    result.innerHTML = "A enviar...";
 
     fetch("https://api.web3forms.com/submit", {
       method: "POST",
