--- a/src/components/sectionpricing.astro
+++ b/src/components/sectionpricing.astro
@@ -16,7 +16,7 @@ const pricing = [
     ],
     button: {
       text: "Mais informação sobre o 1:3",
-      link: "/estudionodoanegra/treino-grupo",
+      link: "/treino-grupo",
     },
   },
   {
@@ -30,7 +30,7 @@ const pricing = [
     ],
     button: {
       text: "Mais informação sobre o 1:1",
-      link: "/estudionodoanegra/treino-individual",
+      link: "/treino-individual",
     },
   },
 ];
