--- a/src/components/sectionpricing.astro
+++ b/src/components/sectionpricing.astro
@@ -39,7 +39,10 @@ const pricing = [
 <Container>
   <Sectionhead>
     <Fragment slot="title">Os nossos treinos</Fragment>
-    <Fragment slot="desc">Oferecemos dois modos distintos de treino personalizado para atender às tuas necessidades individuais.</Fragment>
+    <Fragment slot="desc">
+      <p class="text-lg mb-1">Oferecemos dois modos distintos de treino personalizado para atender às tuas necessidades individuais.</p>
+      <p class="">Independentemente do modo escolhido, a tua opção é cuidadosamente considerada, e garantimos que serás inserido num grupo sempre com a devida atenção às tuas necessidades.</p>
+    </Fragment>
   </Sectionhead>
 
   <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-screen-lg mt-12">
