--- a/src/pages/treino-individual.astro
+++ b/src/pages/treino-individual.astro
@@ -62,7 +62,7 @@ import Inscricaoform from "@components/inscricaoform.astro";
           </tbody>
         </table>
         <p class="text-sm mt-4">
-          Ao preço da mensalidade <b>acresce o IVA à taxa legal de 22%.</b>
+          Ao preço da mensalidade <b>acresce o IVA à taxa legal em vigor.</b>
         </p>
       </div>
       </div>
