--- a/src/components/sectionpricing.astro
+++ b/src/components/sectionpricing.astro
@@ -41,7 +41,7 @@ const pricing = [
     <Fragment slot="title">Os nossos treinos</Fragment>
     <Fragment slot="desc">
       <p class="text-lg mb-1">Oferecemos dois modos distintos de treino personalizado para atender às tuas necessidades individuais.</p>
-      <p class="">Independentemente do modo escolhido, a tua opção é cuidadosamente considerada, e garantimos que serás inserido num grupo sempre com a devida atenção às tuas necessidades.</p>
+      <p class="">Independentemente do modo escolhido, a tua opção é cuidadosamente considerada, e garantimos a tua inserção num grupo de <b>Treino 1:3</b>.</p>
     </Fragment>
   </Sectionhead>
 
