--- a/src/pages/treino-grupo.astro
+++ b/src/pages/treino-grupo.astro
@@ -36,27 +36,27 @@ import Inscricaoform from "@components/inscricaoform.astro";
             <tr class="border-secondary">
               <td>1</td>
               <td>12</td>
-              <td>180€</td>
+              <td>180€ / pessoa</td>
             </tr>
             <tr class="border-secondary">
               <td>2</td>
               <td>10</td>
-              <td>160€</td>
+              <td>160€ / pessoa</td>
             </tr>
             <tr class="border-secondary">
               <td>3</td>
               <td>8</td>
-              <td>145€</td>
+              <td>145€ / pessoa</td>
             </tr>
             <tr class="border-secondary">
               <td>4</td>
               <td>6</td>
-              <td>115€</td>
+              <td>115€ / pessoa</td>
             </tr>
             <tr class="border-secondary">
               <td>5</td>
               <td>4</td>
-              <td>80€</td>
+              <td>80€ / pessoa</td>
             </tr>
           </tbody>
         </table>
